--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,20 @@ body {
 
   font-family: "Inter", sans-serif;
 }
+
+.app-background {
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(
+      farthest-side at bottom left,
+      #a600e881,
+      transparent 100%
+    ),
+    radial-gradient(farthest-corner at top right, #a600e883, transparent 150vh),
+    radial-gradient(farthest-corner at top left, #00b2e881, transparent 100vh),
+    radial-gradient(
+      farthest-corner at bottom right,
+      #00b2e885,
+      transparent 160vh
+    );
+}
