--- a/src/components/auth/Display.css
+++ b/src/components/auth/Display.css
@@ -45,3 +45,24 @@
   cursor: pointer;
   transition: 0.2s;
 }
+
+.button-forgot {
+  border: none;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  padding: 0.5rem 1.6rem;
+
+  border-radius: 0.4rem;
+  font-size: 0.9rem;
+  font-weight: 600;
+  background: transparent;
+  color: rgba(75, 168, 255, 0.7);
+  transition: 0.2s;
+}
+
+.button-forgot:hover {
+  background: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  transition: 0.2s;
+}
