login and register ready to receive firebase

--- a/src/components/auth/Display.css
+++ b/src/components/auth/Display.css
@@ -26,6 +26,12 @@
   outline: none;
 }
 
+.field-info {
+  margin: 0;
+  font-size: 0.8rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+
 .button-submit {
   border: none;
   margin-top: 1rem;
